<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/activity_main"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/padding_medium">

	<EditText
		android:id="@+id/etName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/name"
		android:inputType="text"/>

	<EditText
		android:id="@+id/etEmail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/etName"
		android:ems="10"
		android:hint="@string/email"
		android:inputType="textEmailAddress"/>

	<EditText
		android:id="@+id/etConfirmEmail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/etEmail"
		android:ems="10"
		android:hint="@string/confirm_email"
		android:inputType="textEmailAddress"/>

	<EditText
		android:id="@+id/etPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/etConfirmEmail"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"/>

	<EditText
		android:id="@+id/etConfirmPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/etPassword"
		android:ems="10"
		android:hint="@string/confirm_password"
		android:inputType="textPassword"/>

	<EditText
		android:id="@+id/etPhone"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/etConfirmPassword"
		android:ems="10"
		android:hint="@string/phone"
		android:inputType="phone"/>

	<EditText
		android:id="@+id/etAge"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/etPhone"
		android:ems="10"
		android:hint="@string/age"
		android:inputType="text"/>

	<Button
		android:id="@+id/submit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/etAge"
		android:layout_marginTop="@dimen/padding_medium"
		android:text="@string/submit"/>
</RelativeLayout>
